Translate: Fix header alignment

--- a/src/subtitulamos/resources/assets/css/translate.scss
+++ b/src/subtitulamos/resources/assets/css/translate.scss
@@ -171,6 +171,7 @@
 
       * {
         font-weight: bold;
+        justify-content: center;
       }
     }
 
@@ -231,6 +232,7 @@
       width: 45px;
       font-family: "Rubik", sans-serif;
       font-weight: 500 !important;
+      justify-content: center;
 
       * {
         font-weight: 500 !important;
@@ -239,6 +241,7 @@
 
     .user {
       width: 135px;
+      justify-content: center;
 
       a {
         text-align: center;
@@ -250,6 +253,7 @@
     .time {
       width: 130px;
       padding: 0;
+      justify-content: center;
 
       input {
         background-color: var(--color-offwhite);
